Bug 263990 - RenderVideo::videoBox crashes when intrinsic size is zero
Summary: RenderVideo::videoBox crashes when intrinsic size is zero
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-10-31 12:27 PDT by Mike Wyrzykowski
Modified: 2023-10-31 15:33 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Wyrzykowski 2023-10-31 12:27:35 PDT
RenderVideo::videoBox crashes when intrinsic size is zero
Comment 1 Radar WebKit Bug Importer 2023-10-31 12:28:19 PDT
<rdar://problem/117755803>
Comment 2 Mike Wyrzykowski 2023-10-31 12:36:17 PDT
Pull request: https://github.com/WebKit/WebKit/pull/19789
Comment 3 Mike Wyrzykowski 2023-10-31 12:39:10 PDT
<rdar://problem/116303559>
Comment 4 EWS 2023-10-31 15:32:59 PDT
Committed 270032@main (0dfdb1a30720): <https://commits.webkit.org/270032@main>

Reviewed commits have been landed. Closing PR #19789 and removing active labels.